# rs-trafilatura

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
docs/: architecture.md  blog-post.md  differences.md
examples/: basic.rs  benchmark_extract.rs  markdown_output.rs  metadata.rs  test_baseline.rs  test_discard.rs  test_l3s.rs  test_readability.rs  test_readability2.rs  test_readability3.rs  test_single.rs  test_storybody.rs  test_vox.rs  webis_benchmark.rs
scripts/: analyze_precision.py  benchmark-comparison.sh  compare_scores.py  evaluate.sh  test_single_file.rs
src/: dom.rs  encoding.rs  error.rs  etree.rs  extract.rs  html_processing.rs  lib.rs  link_density.rs  lru.rs  markdown.rs  options.rs  patterns.rs  result.rs  scoring.rs  spider_integration.rs  url_utils.rs
src/extractor/: comments.rs  fallback.rs  handlers.rs  mod.rs  pipeline.rs  pruning.rs  state.rs  tags.rs
src/metadata/: dom_extraction.rs  json_ld.rs  meta_tags.rs  mod.rs
src/page_type/: ml.rs  mod.rs
src/selector/: comments.rs  content.rs  discard.rs  meta.rs  mod.rs  precision.rs  utils.rs
tests/: accuracy_test.rs  author_date_extraction_test.rs  author_diagnostic_test.rs  boilerplate_test.rs  categories_tags_test.rs  comments_test.rs  debug_single.rs  description_language_test.rs  encoding_test.rs  extraction_test.rs  find_failures.rs  html_output_test.rs  image_license_test.rs  image_link_toggle_test.rs  integration_tests.rs  language_filtering_test.rs  options_test.rs  parity_test.rs  partial_test.rs  precision_test.rs  recall_test.rs  robustness_test.rs  scoring_test.rs  site_identity_test.rs  spike_markdown_validation.rs  subtitle_extraction_test.rs  table_test.rs  text_output_test.rs  title_extraction_test.rs  toggle_test.rs
tests/integration/: edge_cases.rs  feature_combinations.rs  mod.rs  real_world_articles.rs
tests/integration/fixtures/: article_full.html  article_with_boilerplate.html  article_with_duplicates.html  blog_with_comments.html  docs_with_tables.html
